Renaming, refactoring, adding sweet-js

--- a/sample-app/app/templates/application.hbs
+++ b/sample-app/app/templates/application.hbs
@@ -1,5 +1,5 @@
 <h2 id='title'>Welcome to Ember.js</h2>
 
-{{yannotate-ui user=user replay=replay}}
+{{annotate-ui user=user replay=replay}}
 
 {{outlet}}
