--- a/src/templates/analyses-container.hbs
+++ b/src/templates/analyses-container.hbs
@@ -5,7 +5,7 @@
       <strong>{{capitalize analysis.user.league}}</strong>
     </div>
 
-    {{view "Ember.Yannotate.GeneralComment"}}
-    {{view "Ember.Yannotate.Timeline"}}
+    {{view "LoLImprove.Annotate.GeneralComment"}}
+    {{view "LoLImprove.Annotate.Timeline"}}
   </div>
 {{/each}}
