--- a/src/templates/annotate-player.hbs
+++ b/src/templates/annotate-player.hbs
@@ -4,7 +4,7 @@
 </div>
 
 <div class="replay-container">
-  <div id="yannotate-player"></div>
+  <div id="annotate-player"></div>
 </div>
 
 <div class="replay-data">
