--- a/src/templates/analysis/timeline.hbs
+++ b/src/templates/analysis/timeline.hbs
@@ -1,3 +1,3 @@
 {{#each entry in analysis.content.timeline}}
-  {{view "Ember.Yannotate.TimelineEntry"}}
+  {{view "LoLImprove.Annotate.TimelineEntry"}}
 {{/each}}
