--- a/src/templates/analysis/general-comment.hbs
+++ b/src/templates/analysis/general-comment.hbs
@@ -1,3 +1,3 @@
 <div class="analysis-general-comment">
-  {{capitalize analysis.content.general}}
+  {{capitalize analysis.content.general.content}}
 </div>
