--- a/app/templates/annotate-player.hbs
+++ b/app/templates/annotate-player.hbs
@@ -1,4 +1,5 @@
 <div class="replay-header">
+
   <h2>{{str-capitalize replay.champion}} vs {{str-capitalize replay.matchup}} - {{str-capitalize replay.lane}} lane</h2>
   <strong class="replay-match-result">{{str-upcase replay.result}}</strong>
 </div>
@@ -20,8 +21,8 @@
 
   <div class="replay-information">
     <ul>
-      <li>{{replay.kda.k}}/{{replay.kda.d}}//{{replay.kda.a}}</li>
-      <li>{{replay.length}}</li>
+      <li>{{replay.kda}}</li>
+      <li>{{replay.duration}}</li>
       <li>{{replay.patch}}</li>
     </ul>
   </div>
