--- a/app/templates/analysis/general-comment.hbs
+++ b/app/templates/analysis/general-comment.hbs
@@ -1,3 +1,3 @@
 <div class="analysis-general-comment">
-  {{str-capitalize analysis.content.general.content}}
+  {{str-capitalize analysis.generalComment.content}}
 </div>
